--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     padding: 0;
     box-sizing: border-box;
     text-wrap: pretty;
-    /* border: 1px solid rgb(239, 35, 161); */
+    /* border: 0.1rem solid rgb(239, 35, 161); */
 }
 
 html {
@@ -32,30 +32,30 @@ p {
 
 h1 {
     font-family: "Poetsen One"; 
-    font-size: 40px;
+    font-size: 4rem;
     font-weight: 450;
     color: rgb(118, 57, 92);
     text-align: center;
-    padding: 20px;
+    padding: 2rem;
 }
 
 h2 {
-    font-size: 20px;
+    font-size: 2rem;
     font-family: "Lora";
     color: rgb(152, 85, 125);
     text-align: center;
-    padding: 0px 0px 15px;
+    padding: 0rem 0rem 1.5rem;
 }
 
 button {
     font-family: "Lora";
-    font-size: 13px;
+    font-size: 1.6rem;
     font-weight: 700;
     background-color: rgb(142, 54, 107);
     color: #faf7f9;
-    border: 2px solid #dfdffd;
-    border-radius: 5px 5px;
-    padding: 6px 8px 6px 8px;
+    border: 0.2rem solid #dfdffd;
+    border-radius: 0.5rem 0.5rem;
+    padding: 0.6rem 0.8rem 0.6rem 0.8rem;
 }
 
 button:hover {
@@ -84,24 +84,21 @@ button:hover {
 
 .dflex {
     display: flex;
-    /* without this wont work */
     align-items: center;
-    /* top & bottom Alignment */
     justify-content: center;
-    /* left & right Alignment */
 }
 
 .studentContainer {
-    padding: 10px;
+    padding: 1rem;
 }
 
 .studentBody img {
-    height: 200px;
+    height: 20rem;
     width: auto;
 }
 
 .studentBody {
-    border: 5px solid #dfdffd;
+    border: 0.5rem solid #dfdffd;
     border-radius: 6%;
     padding: 4rem;
 }
@@ -110,7 +107,7 @@ button:hover {
     border-radius: 6%;
     margin-bottom: 2rem;
     background-color: #c57499;
-    border: 3px solid #dfdffd;
+    border: 0.3rem solid #dfdffd;
     text-align: center;
 }
 
@@ -139,40 +136,25 @@ button:hover {
     }
     h1{
         font-family: "Poetsen One"; 
-        font-size: 30px;
+        font-size: 3rem;
         font-weight: 400; 
         color: rgb(118, 57, 92);
         text-align: center;
-        padding: 15px;
+        padding: 1.5rem;
     }
     .studentContainer {
-        padding: 1px;
+        padding: 0.1rem;
     }
     .studentBody{
         border: none;
     }
-    .student1Block{
-        border: 5px solid #dfdffd;
-        border-radius: 6%;
-    }
-    .student2Block{
-        border: 5px solid #dfdffd;
-        border-radius: 6%;
-    }
-    .student3Block{
-        border: 5px solid #dfdffd;
-        border-radius: 6%;
-    }
-    .student4Block{
-        border: 5px solid #dfdffd;
-        border-radius: 6%;
-    }
-    .student5Block{
-        border: 5px solid #dfdffd;
-        border-radius: 6%;
-    }
+    .student1Block,
+    .student2Block,
+    .student3Block,
+    .student4Block,
+    .student5Block,
     .student6Block{
-        border: 5px solid #dfdffd;
+        border: 0.5rem solid #dfdffd;
         border-radius: 6%;
     }
 }
