--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ p {
 h1 {
     font-family: "Poetsen One"; 
     font-size: 4rem;
-    font-weight: 450;
+    font-weight: 800;
     color: rgb(118, 57, 92);
     text-align: center;
     padding: 2rem;
@@ -41,6 +41,7 @@ h1 {
 
 h2 {
     font-size: 2rem;
+    font-weight: 600;
     font-family: "Lora";
     color: rgb(152, 85, 125);
     text-align: center;
@@ -55,7 +56,7 @@ button {
     color: #faf7f9;
     border: 0.2rem solid #dfdffd;
     border-radius: 0.5rem 0.5rem;
-    padding: 0.6rem 0.8rem 0.6rem 0.8rem;
+    padding: 0.6rem 0.8rem;
 }
 
 button:hover {
