--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ p {
 }
 
 h1 {
-    font-family: "Poetsen One"; 
+    font-family: "Pacifico"; 
     font-size: 4rem;
     font-weight: 800;
     color: rgb(118, 57, 92);
